NDS-257 Fix markdown formatting

--- a/packages/docs/src/content/foundations/spacing/index.mdx
+++ b/packages/docs/src/content/foundations/spacing/index.mdx
@@ -1,10 +1,11 @@
 ---
-
 title: Spacing
 description: Spacing between elements and vertical rhythm
 
 template: detail
----## Introduction
+---
+
+## Introduction
 
 Keep a consistent vertical and horizontal rhythm between elements on a page.
 
