--- a/packages/docs/src/content/foundations/colour/index.mdx
+++ b/packages/docs/src/content/foundations/colour/index.mdx
@@ -3,14 +3,13 @@ title: Colour
 description: Colour palettes and usage, contrast guidelines and SASS variables
 
 template: detail
-
 ---
 
-Follow these guidelines to determine the best way to apply the NICE colour palette. We use colour to aid in communication and help our users navigate. We also use our [brand guidelines](https://www.nice.org.uk/brand/colour-palette) to help form the base of our digital palette.
+Follow these guidelines to determine the best way to apply the NICE colour palette. We use colour to aid in communication and help our users navigate. We also use our [brand guidelines](https://indepth.nice.org.uk/our-brand/index.html) to help form the base of our digital palette.
 
 ## Tokens
 
-Our colours are organised by assigning them to values called *design tokens*. There are two types of tokens: *global tokens*, which specify the colours themselves, and *alias tokens*, which describe how those colours are used.
+Our colours are organised by assigning them to values called _design tokens_. There are two types of tokens: _global tokens_, which specify the colours themselves, and _alias tokens_, which describe how those colours are used.
 
 Organising our colours this way helps us to maintain the design system. Here's [a YouTube video that explains why design tokens are very useful](https://www.youtube.com/watch?v=wtTstdiBuUk).
 
@@ -23,54 +22,54 @@ They are split into two groups: brand colours, and custom colours.
 
 Brand colours are taken directly from NICE's brand palette.
 
-| Name | Hex | Swatch |
-| - | - | - |
-| $nice-teal | #228096 | ![#228096](https://via.placeholder.com/70x20/228096/228096.png) |
-| $nice-cream | #f7f4f1 | ![#f7f4f1](https://via.placeholder.com/70x20/f7f4f1/f7f4f1.png) |
-| $nice-blue | #00436c | ![#00436c](https://via.placeholder.com/70x20/00436c/00436c.png) |
-| $white | #fff | ![#fff](https://via.placeholder.com/70x20/fff/fff.png) |
-| $black | #000 | ![#000000](https://via.placeholder.com/70x20/000000/000000.png) |
-| $nice-black | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) |
-| $yellow | #ead054 | ![#ead054](https://via.placeholder.com/70x20/ead054/ead054.png) |
-| $nice-teal-tint-1 | #59a0b0 | ![#59a0b0](https://via.placeholder.com/70x20/59a0b0/59a0b0.png) |
-| $nice-teal-tint-2 | #91c0cb | ![#91c0cb](https://via.placeholder.com/70x20/91c0cb/91c0cb.png) |
-| $nice-teal-tint-3 | #c8e0e6 | ![#c8e0e6](https://via.placeholder.com/70x20/c8e0e6/c8e0e6.png) |
-| $nice-blue-tint-1 | #407291 | ![#407291](https://via.placeholder.com/70x20/407291/407291.png) |
-| $nice-blue-tint-2 | #80a1b5 | ![#80a1b5](https://via.placeholder.com/70x20/80a1b5/80a1b5.png) |
-| $nice-blue-tint-3 | #bfd0da | ![#bfd0da](https://via.placeholder.com/70x20/bfd0da/bfd0da.png) |
-| $nice-cream-1 | #ded5ca | ![#ded5ca](https://via.placeholder.com/70x20/ded5ca/ded5ca.png) |
-| $nice-cream-2 | #e6e0d7 | ![#e6e0d7](https://via.placeholder.com/70x20/e6e0d7/e6e0d7.png) |
-| $nice-cream-3 | #eeeae4 | ![#eeeae4](https://via.placeholder.com/70x20/eeeae4/eeeae4.png) |
+| Name               | Hex     | Swatch                                                          |
+| ------------------ | ------- | --------------------------------------------------------------- |
+| $nice-teal         | #228096 | ![#228096](https://via.placeholder.com/70x20/228096/228096.png) |
+| $nice-cream        | #f7f4f1 | ![#f7f4f1](https://via.placeholder.com/70x20/f7f4f1/f7f4f1.png) |
+| $nice-blue         | #00436c | ![#00436c](https://via.placeholder.com/70x20/00436c/00436c.png) |
+| $white             | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          |
+| $black             | #000    | ![#000000](https://via.placeholder.com/70x20/000000/000000.png) |
+| $nice-black        | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) |
+| $yellow            | #ead054 | ![#ead054](https://via.placeholder.com/70x20/ead054/ead054.png) |
+| $nice-teal-tint-1  | #59a0b0 | ![#59a0b0](https://via.placeholder.com/70x20/59a0b0/59a0b0.png) |
+| $nice-teal-tint-2  | #91c0cb | ![#91c0cb](https://via.placeholder.com/70x20/91c0cb/91c0cb.png) |
+| $nice-teal-tint-3  | #c8e0e6 | ![#c8e0e6](https://via.placeholder.com/70x20/c8e0e6/c8e0e6.png) |
+| $nice-blue-tint-1  | #407291 | ![#407291](https://via.placeholder.com/70x20/407291/407291.png) |
+| $nice-blue-tint-2  | #80a1b5 | ![#80a1b5](https://via.placeholder.com/70x20/80a1b5/80a1b5.png) |
+| $nice-blue-tint-3  | #bfd0da | ![#bfd0da](https://via.placeholder.com/70x20/bfd0da/bfd0da.png) |
+| $nice-cream-1      | #ded5ca | ![#ded5ca](https://via.placeholder.com/70x20/ded5ca/ded5ca.png) |
+| $nice-cream-2      | #e6e0d7 | ![#e6e0d7](https://via.placeholder.com/70x20/e6e0d7/e6e0d7.png) |
+| $nice-cream-3      | #eeeae4 | ![#eeeae4](https://via.placeholder.com/70x20/eeeae4/eeeae4.png) |
 | $nice-cream-tint-1 | #fbfaf8 | ![#fbfaf8](https://via.placeholder.com/70x20/fbfaf8/fbfaf8.png) |
-| $black-tint-1 | #404040 | ![#404040](https://via.placeholder.com/70x20/404040/404040.png) |
-| $black-tint-2 | #808080 | ![#808080](https://via.placeholder.com/70x20/808080/808080.png) |
-| $black-tint-3 | #bfbfbf | ![#bfbfbf](https://via.placeholder.com/70x20/bfbfbf/bfbfbf.png) |
-
+| $black-tint-1      | #404040 | ![#404040](https://via.placeholder.com/70x20/404040/404040.png) |
+| $black-tint-2      | #808080 | ![#808080](https://via.placeholder.com/70x20/808080/808080.png) |
+| $black-tint-3      | #bfbfbf | ![#bfbfbf](https://via.placeholder.com/70x20/bfbfbf/bfbfbf.png) |
 
 #### Custom colours
 
 Custom colours are not contained in the brand palette, but they give us a little more freedom
 to choose suitable colours in situations where none of the brand colours will do.
 
-| Name | Hex | Swatch |
-| - | - | - |
-| $custom-grey-1 | #adadad | ![#adadad](https://via.placeholder.com/70x20/adadad/adadad.png) |
-| $custom-grey-2 | #d6d6d6 | ![#d6d6d6](https://via.placeholder.com/70x20/d6d6d6/d6d6d6.png) |
-| $custom-grey-3 | #666666 | ![#666666](https://via.placeholder.com/70x20/666666/666666.png) |
-| $custom-blue-1 | #005ea5 | ![#005ea5](https://via.placeholder.com/70x20/005ea5/005ea5.png) |
-| $custom-blue-2 | #003761 | ![#003761](https://via.placeholder.com/70x20/003761/003761.png) |
-| $custom-blue-3 | #3479d0 | ![#3479d0](https://via.placeholder.com/70x20/3479d0/3479d0.png) |
-| $custom-blue-3-tint | #eff4fc | ![#eff4fc](https://via.placeholder.com/70x20/eff4fc/eff4fc.png) |
-| $custom-purple-1 | #4c2c92 | ![#4c2c92](https://via.placeholder.com/70x20/4c2c92/4c2c92.png) |
-| $custom-red-1 | #b50f23 | ![#b50f23](https://via.placeholder.com/70x20/b50f23/b50f23.png) |
-| $custom-red-1-tint | #f9eced | ![#f9eced](https://via.placeholder.com/70x20/f9eced/f9eced.png) |
-| $custom-orange-1 | #dc8a07 | ![#dc8a07](https://via.placeholder.com/70x20/dc8a07/dc8a07.png) |
-| $custom-orange-1-tint | #fbf7f1 | ![#fbf7f1](https://via.placeholder.com/70x20/fbf7f1/fbf7f1.png) |
-| $custom-green-1 | #68c103 | ![#68c103](https://via.placeholder.com/70x20/68c103/68c103.png) |
-| $custom-green-1-tint | #f3faeb | ![#f3faeb](https://via.placeholder.com/70x20/f3faeb/f3faeb.png) |
-| $custom-yellow-shade | #d6ba32 | ![#d6ba32](https://via.placeholder.com/70x20/d6ba32/d6ba32.png) |
+| Name                     | Hex     | Swatch                                                          |
+| ------------------------ | ------- | --------------------------------------------------------------- |
+| $custom-grey-1           | #adadad | ![#adadad](https://via.placeholder.com/70x20/adadad/adadad.png) |
+| $custom-grey-2           | #d6d6d6 | ![#d6d6d6](https://via.placeholder.com/70x20/d6d6d6/d6d6d6.png) |
+| $custom-grey-3           | #666666 | ![#666666](https://via.placeholder.com/70x20/666666/666666.png) |
+| $custom-grey-4           | #e9e9e9 | ![#666666](https://via.placeholder.com/70x20/e9e9e9/e9e9e9.png) |
+| $custom-blue-1           | #005ea5 | ![#005ea5](https://via.placeholder.com/70x20/005ea5/005ea5.png) |
+| $custom-blue-2           | #003761 | ![#003761](https://via.placeholder.com/70x20/003761/003761.png) |
+| $custom-blue-3           | #3479d0 | ![#3479d0](https://via.placeholder.com/70x20/3479d0/3479d0.png) |
+| $custom-blue-3-tint      | #eff4fc | ![#eff4fc](https://via.placeholder.com/70x20/eff4fc/eff4fc.png) |
+| $custom-purple-1         | #4c2c92 | ![#4c2c92](https://via.placeholder.com/70x20/4c2c92/4c2c92.png) |
+| $custom-red-1            | #b50f23 | ![#b50f23](https://via.placeholder.com/70x20/b50f23/b50f23.png) |
+| $custom-red-1-tint       | #f9eced | ![#f9eced](https://via.placeholder.com/70x20/f9eced/f9eced.png) |
+| $custom-orange-1         | #dc8a07 | ![#dc8a07](https://via.placeholder.com/70x20/dc8a07/dc8a07.png) |
+| $custom-orange-1-tint    | #fbf7f1 | ![#fbf7f1](https://via.placeholder.com/70x20/fbf7f1/fbf7f1.png) |
+| $custom-green-1          | #68c103 | ![#68c103](https://via.placeholder.com/70x20/68c103/68c103.png) |
+| $custom-green-1-tint     | #f3faeb | ![#f3faeb](https://via.placeholder.com/70x20/f3faeb/f3faeb.png) |
+| $custom-yellow-shade     | #d6ba32 | ![#d6ba32](https://via.placeholder.com/70x20/d6ba32/d6ba32.png) |
 | $custom-yellow-highlight | #fff999 | ![#fff999](https://via.placeholder.com/70x20/fff999/fff999.png) |
-| $custom-teal | #0092a6 | ![#0092a6](https://via.placeholder.com/70x20/0092a6/0092a6.png) |
+| $custom-teal             | #0092a6 | ![#0092a6](https://via.placeholder.com/70x20/0092a6/0092a6.png) |
 
 ### Alias tokens
 
@@ -78,7 +77,83 @@ Alias tokens tell us where the global tokens should be used. They provide meanin
 
 When updating stylesheets, **always** use alias tokens and **never** use global tokens.
 
-TODO: Add link to the list of NDS alias tokens.
+Generic alias tokens have been listed below. There are also a number of component-specific tokens, which are not listed here for brevity's sake.
+
+#### Text, links and focus
+
+| Alias token           | Global token             | Hex     | Swatch                                                          | Use                                             |
+| --------------------- | ------------------------ | ------- | --------------------------------------------------------------- | ----------------------------------------------- |
+| $text                 | $nice-black              | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) | Text                                            |
+| $text-inverse         | $white                   | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | Text on a dark background                       |
+| $link                 | $custom-blue-1           | #005ea5 | ![#005ea5](https://via.placeholder.com/70x20/005ea5/005ea5.png) | Link                                            |
+| $link-hover           | $custom-blue-2           | #003761 | ![#003761](https://via.placeholder.com/70x20/003761/003761.png) | Link hover                                      |
+| $link-visited         | $custom-purple-1         | #4c2c92 | ![#4c2c92](https://via.placeholder.com/70x20/4c2c92/4c2c92.png) | Visited link                                    |
+| $link-active          | $nice-black              | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) | Active link                                     |
+| $link-focus           | $custom-blue-1           | #005ea5 | ![#005ea5](https://via.placeholder.com/70x20/005ea5/005ea5.png) | Link focus                                      |
+| $link-inverse         | $white                   | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | Link on a dark background                       |
+| $link-inverse-hover   | $custom-blue-3-tint      | #eff4fc | ![#eff4fc](https://via.placeholder.com/70x20/eff4fc/eff4fc.png) | Link hover on a dark background                 |
+| $link-inverse-visited | $white                   | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | Visited link on a dark background               |
+| $link-inverse-active  | $custom-blue-3-tint      | #eff4fc | ![#eff4fc](https://via.placeholder.com/70x20/eff4fc/eff4fc.png) | Active link on a dark background                |
+| $link-inverse-focus   | $white                   | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | Link focus on a dark background                 |
+| $code-background      | $custom-grey-4           | #e9e9e9 | ![#666666](https://via.placeholder.com/70x20/e9e9e9/e9e9e9.png) | Background colour for code blocks               |
+| $mark                 | $custom-yellow-highlight | #fff999 | ![#fff999](https://via.placeholder.com/70x20/fff999/fff999.png) | Colour to highlight text with                   |
+| $focus                | $custom-teal             | #0092a6 | ![#0092a6](https://via.placeholder.com/70x20/0092a6/0092a6.png) | High contrast focus colour                      |
+| $focus-inverse        | $white                   | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | High contrast focus colour on a dark background |
+| $text-print           | $black                   | #000    | ![#000000](https://via.placeholder.com/70x20/000000/000000.png) | Text colour when printing                       |
+
+#### Buttons
+
+| Alias token          | Global token         | Hex     | Swatch                                                          | Use                               |
+| -------------------- | -------------------- | ------- | --------------------------------------------------------------- | --------------------------------- |
+| $btn-cta             | $yellow              | #ead054 | ![#ead054](https://via.placeholder.com/70x20/ead054/ead054.png) | CTA button background             |
+| $btn-cta-hover       | $custom-yellow-shade | #d6ba32 | ![#d6ba32](https://via.placeholder.com/70x20/d6ba32/d6ba32.png) | CTA button background hover       |
+| $btn-cta-text        | $nice-black          | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) | CTA button text                   |
+| $btn-cta-border      | $white               | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | CTA button border                 |
+| $btn-primary         | $black-tint-1        | #404040 | ![#404040](https://via.placeholder.com/70x20/404040/404040.png) | Primary button background         |
+| $btn-primary-hover   | $nice-black          | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) | Primary button background hover   |
+| $btn-primary-text    | $white               | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | Primary button text               |
+| $btn-secondary       | $custom-grey-3       | #666666 | ![#666666](https://via.placeholder.com/70x20/666666/666666.png) | Secondary button background       |
+| $btn-secondary-hover | $black-tint-1        | #404040 | ![#404040](https://via.placeholder.com/70x20/404040/404040.png) | Secondary button background hover |
+| $btn-secondary-text  | $white               | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | Secondary button text             |
+| $btn-inverse         | $white               | #fff    | ![#fff](https://via.placeholder.com/70x20/fff/fff.png)          | Inverse button background         |
+| $btn-inverse-hover   | $custom-grey-4       | #e9e9e9 | ![#666666](https://via.placeholder.com/70x20/e9e9e9/e9e9e9.png) | Inverse button background hover   |
+| $btn-inverse-text    | $nice-black          | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) | Inverse button text               |
+
+#### Borders
+
+| Alias token      | Global token   | Hex     | Swatch                                                          | Use                                                      |
+| ---------------- | -------------- | ------- | --------------------------------------------------------------- | -------------------------------------------------------- |
+| $border          | $custom-grey-1 | #adadad | ![#adadad](https://via.placeholder.com/70x20/adadad/adadad.png) | Default border for any block element: panels, tables etc |
+| $border-selected | $nice-teal     | #228096 | ![#228096](https://via.placeholder.com/70x20/228096/228096.png) | Border colour for a selected element, e.g. current tab   |
+
+#### Status
+
+| Alias token         | Global token          | Hex     | Swatch                                                          | Use                                   |
+| ------------------- | --------------------- | ------- | --------------------------------------------------------------- | ------------------------------------- |
+| $error              | $custom-red-1         | #b50f23 | ![#b50f23](https://via.placeholder.com/70x20/b50f23/b50f23.png) | Shows an error state or message       |
+| $error-background   | $custom-red-1-tint    | #f9eced | ![#f9eced](https://via.placeholder.com/70x20/f9eced/f9eced.png) | Background for any error state        |
+| $info               | $custom-blue-3        | #3479d0 | ![#3479d0](https://via.placeholder.com/70x20/3479d0/3479d0.png) | Shows an information state or message |
+| $info-background    | $custom-blue-3-tint   | #eff4fc | ![#eff4fc](https://via.placeholder.com/70x20/eff4fc/eff4fc.png) | Background for any info state         |
+| $caution            | $custom-orange-1      | #dc8a07 | ![#dc8a07](https://via.placeholder.com/70x20/dc8a07/dc8a07.png) | Shows a caution state or message      |
+| $caution-background | $custom-orange-1-tint | #fbf7f1 | ![#fbf7f1](https://via.placeholder.com/70x20/fbf7f1/fbf7f1.png) | Background for any caution state      |
+| $success            | $custom-green-1       | #68c103 | ![#68c103](https://via.placeholder.com/70x20/68c103/68c103.png) | Shows a successful state or message   |
+| $success-background | $custom-green-1-tint  | #f3faeb | ![#f3faeb](https://via.placeholder.com/70x20/f3faeb/f3faeb.png) | Background for any successful state   |
+
+#### Fills
+
+| Alias token           | Global token       | Hex     | Swatch                                                          | Use                            |
+| --------------------- | ------------------ | ------- | --------------------------------------------------------------- | ------------------------------ |
+| $fill-page-background | $nice-cream-tint-1 | #fbfaf8 | ![#fbfaf8](https://via.placeholder.com/70x20/fbfaf8/fbfaf8.png) | Default page background colour |
+
+#### Forms
+
+| Alias token      | Global token  | Hex     | Swatch                                                          | Use                                       |
+| ---------------- | ------------- | ------- | --------------------------------------------------------------- | ----------------------------------------- |
+| $form-group-hint | $black-tint-1 | #404040 | ![#404040](https://via.placeholder.com/70x20/404040/404040.png) | Useful info about a form field or section |
+| $checkbox        | $nice-black   | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) | Colour of checkbox elements               |
+| $checkbox-hint   | $black-tint-1 | #404040 | ![#404040](https://via.placeholder.com/70x20/404040/404040.png) | Useful info about a checkbox element      |
+| $radio           | $nice-black   | #0e0e0e | ![#0e0e0e](https://via.placeholder.com/70x20/0e0e0e/0e0e0e.png) | Colour of radio button elements           |
+| $radio-hint      | $black-tint-1 | #404040 | ![#404040](https://via.placeholder.com/70x20/404040/404040.png) | Useful info about a radio button element  |
 
 ## Accessibility
 
