--- a/packages/docs/src/content/foundations/typography/index.mdx
+++ b/packages/docs/src/content/foundations/typography/index.mdx
@@ -1,14 +1,15 @@
 ---
-
 title: Typography
 description: Headings, paragraphs, featured text, quotations, lists, links
 
 template: detail
----## Basics
+---
 
-- typography follows the rules from our [brand guidelines](https://www.nice.org.uk/brand/typography){:target="\_blank"} with some web specific adaptations (for responsive etc)
-- we use Lato, which can be referenced or [downloaded from Google](https://fonts.google.com/share?selection.family=Lato:ital,wght@0,400;0,700;1,400;1,700){:target="\_blank"}
-- follow [NICE's style guide](https://www.nice.org.uk/corporate/ecd1/){:target="\_blank"} for writing.
+## Basics
+
+- typography follows the rules from our [brand guidelines](https://indepth.nice.org.uk/our-brand/index.html) with some web specific adaptations (for responsive etc)
+- we use a mixture of [Lora](https://fonts.google.com/specimen/Lora) for some headings and [Inter](https://fonts.google.com/specimen/Inter) for everything else
+- follow [NICE's style guide](https://www.nice.org.uk/corporate/ecd1/) for writing.
 
 ### Usage
 
@@ -166,3 +167,13 @@ Use piped lists as an alternative to unstyled lists. Use them to display a finit
     <li><a href="#">Proposed</a></li>
 </ul>
 ```
+
+## Utility classes
+
+If you need to force the rendering of a particular style of font (for example within the CMS), as a last resort you can use one of these utility classes:
+
+- Use a class of `font-family-sans` to force rendering a sans-serif font
+- Use a class of `font-family-serif` to force rendering a serif font
+- Use a class of `font-family-serif` to force rendering a monospaced font
+
+It's worth bearing in mind that these should be used in edge cases only; whenever possible it's always preferable to establish design patterns in the underlying code instead.
