SAD-517 Update typo in docs

--- a/packages/docs/src/content/foundations/typography/index.mdx
+++ b/packages/docs/src/content/foundations/typography/index.mdx
@@ -174,6 +174,6 @@ If you need to force the rendering of a particular style of font (for example wi
 
 - Use a class of `font-family-sans` to force rendering a sans-serif font
 - Use a class of `font-family-serif` to force rendering a serif font
-- Use a class of `font-family-serif` to force rendering a monospaced font
+- Use a class of `font-family-mono` to force rendering a monospaced font
 
 It's worth bearing in mind that these should be used in edge cases only; whenever possible it's always preferable to establish design patterns in the underlying code instead.
