NDS-337 Add syntax highlighting

--- a/docs/pages/test3.mdx
+++ b/docs/pages/test3.mdx
@@ -10,6 +10,16 @@ Oh yes, a lovely button
 
 <Button variant="cta">Button fest</Button>
 
-```js
-console.log("I am a code snippet");
+<CH.Code>
+```js hello.js focus=2:3,5 mark=5
+const thing = {
+	this: "that",
+	cheese: "emmental"
+};
+howAbout("a nice cup of tea");
+console.log("Wowzers");
 ```
+```js something.js
+console.log("ERMAGERD, TABS");
+```
+</CH.Code>
