NDS-337 Add component data attributes

--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -18,11 +18,15 @@ A banner for highlighting, and giving context to, a call-to-action.
 
 Use action banners to provide a call to action with context, particularly when drawing attention to the key call to action on the page. They can also be used to break up a page layout and give visual interest.
 
+**TODO: add screenshot here**
+
 The action banner highlights a key action users can take. The colour adds contrast and breaks up the page.
 
 ## When not use
 
 Don't use for large blocks of content. An action banner is designed as a short interruption on the page to call attention to a key action or goal. There should be a short heading and one or two sentences of content maximum.
+
+**TODO: add screenshot here**
 
 An example of the banner to call attention to registering as a stakeholder. There is a short heading and just one sentence of supporting text.
 
