--- a/docs/pages/components/card.mdx
+++ b/docs/pages/components/card.mdx
@@ -1,5 +1,15 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
-import { ExampleCardList, ExampleCardGrid } from "components/examples/Card";
+import { Example } from "components/examples/Example";
+import {
+	ExampleCardList,
+	ExampleCardGrid,
+	ExampleGuidanceList,
+	ExampleCard,
+	ExampleCalloutCard,
+	ExampleClickableCard,
+	ExampleCardListWithImages,
+	ExampleCardWithMetadata
+	} from "components/examples/Card";
 
 export const meta = {
 	title: "Card",
@@ -9,17 +19,21 @@ export const meta = {
 
 # {meta.title}
 
-A navigation component used as an overview and entry point to access more detailed information on a topic.
+A card is a navigation component used as an overview and entry point to access more detailed information on a topic.
 
 There are two types:
 
 **Card lists** stack vertically to show a clear hierarchy or order. They are typically used when people are searching for specific items in a list or when there are lots of list items - example search results.
 
+<Example>
 <ExampleCardList />
+</Example>
 
 **Card grids** appear side by side using the grid system. They typically support people browsing for information or when there are fewer items to display - example NICE and BNF homepage.
 
+<Example>
 <ExampleCardGrid />
+</Example>
 
 ## When to use
 
@@ -31,15 +45,19 @@ Cards are intended as an outline used to entice users to click through to furthe
 
 Card lists are a flexible component for displaying an item within a list. They're used for items like guidance, news and search results to give an easily scannable list. Results lists stack underneath each other to make the ordering/hierarchy of items more obvious.
 
+<Example>
 <ExampleCardList />
+</Example>
 
 ### Card grids
 
 Card grids are used for displaying options side by side in rows of a grid. They support browsing rather than searching.
 
-The callout variant of has a white container which helps to group several different (but related) pieces of information into one unit.
+The callout variant has a white container which helps to group several different (but related) pieces of information into one unit.
 
+<Example>
 <ExampleCardGrid />
+</Example>
 
 ### Card lists vs card grids
 
@@ -63,7 +81,7 @@ Cards will always contain a heading alongside some combination of paragraph text
 
 Cards are usually used within an unstyled, unordered list (`ul.list--unstyled`).
 
-They will always have a heading. They can have a combination of other elements alongside the heading. See the card options [link to card options section] for details of other elements to use.
+They will always have a heading. They can have a combination of other elements alongside the heading. See the card options for details of other elements to use.
 
 ### Guidance list example
 
@@ -71,40 +89,45 @@ Use a card list for displaying things like guidance, advice, quality standards a
 
 - show the id of published guidance in brackets after the title
 - use the correct level of heading to maintain a correct document heading structure
-- use tags in metadata to highlight important content
+- use [tags](/components/tag) in metadata to highlight important content
 - show relevant dates with the correct label
 - use a time tag with the correct datetime attribute to display dates.
 
-(image)
-
-```
-<ul class="list--unstyled">
-<h3 class="card">
-<header class="card__header">
-<p class="card__heading"><a class="non-standard-link-type-example" to="/test">This card has a custom link tag</a></p>
-</header>
-<p class="card__summary" style="
-    font-family: 'Inter';
-">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium assumenda blanditiis culpa in nesciunt optio quibusdam		sunt voluptatum. Aut blanditiis ex excepturi pariatur porro provident		quos repellat tempora. Voluptas?</p>
-</h3>
-</ul>
-```
+<Example>
+<ExampleGuidanceList />
+</Example>
 
 ### Card grid
 
-Use the grid system [link to grid system content] to layout cards next to each other. Card grids are used for browsing through content options on things like homepages and section landing pages.
+Use the [grid system](/components/grid) to layout cards next to each other. Card grids are used for browsing through content options on things like homepages and section landing pages.
 
 Cards in the card grid will fill the width of their grid span.
 
-They will always have a heading. They can have a combination of other elements alongside the heading. See the card options [link to card options section] for details of other elements to use.
+They will always have a heading. They can have a combination of other elements alongside the heading. See the card options for details of other elements to use.
 
 ### Callout card
 
 A callout card adds a white container to the card grid component. Use this for content than needs extra emphasis or content where an additional container will help to group the content inside the card.
 
-(image)
-
-[Add code snippet for callout card]
+<Example>
+<h4>Preview</h4>
+<ExampleCalloutCard />
+<h4>Code</h4>
+<CH.Code>
+```js React
+<Card headingText="Card title 1" callout>
+	Card text 1
+</Card>
+```
+```html HTML
+<article class="card card--callout">
+	<header class="card__header">
+		<p class="card__heading">Card title 1</p>
+	</header>Card text 1
+</article>
+```
+</CH.Code>
+</Example>
 
 #### Equal height
 
@@ -116,7 +139,28 @@ The click area for card grids wraps the entire card. This creates a larger click
 
 We avoid wrapping an entire card in an anchor tag as this can be a difficult experience for screen reader users.
 
-[add example code for clickable card]
+<Example>
+<h4>Preview</h4>
+<ExampleClickableCard />
+<h4>Code</h4>
+<CH.Code>
+```js React
+<Card headingText="Card title 1" link={{ destination: "/test" }}>
+	Card text 1
+</Card>
+```
+```html HTML
+<article class="card">
+	<header class="card__header">
+		<p class="card__heading">
+			<a href="/test">Card title 1</a>
+		</p>
+	</header>
+	Card text 1
+</article>
+```
+</CH.Code>
+</Example>
 
 ### Card headings
 
@@ -126,11 +170,15 @@ Keep headings succinct and make it clear what the user will find on the page tha
 
 Headings can be linked:
 
-(image)
+<Example>
+<ExampleClickableCard />
+</Example>
 
  or not linked:
 
-(image)
+<Example>
+<ExampleCard />
+</Example>
 
 ### Card options
 
@@ -142,37 +190,70 @@ If you need to include supporting information in the card, you can use a paragra
 
 The paragraph sits below the heading for both card lists and card grids.
 
-[code snippet to add paragraph text]
+<CH.Code>
+```js React
+<Card headingText="Card title 1">
+	Card text 1
+</Card>
+```
+```html HTML
+<article class="card">
+	<header class="card__header">
+		<p class="card__heading">Card title 1</p>
+	</header>Card text 1
+</article>
+```
+</CH.Code>
 
 #### Card images
 
 The image must relate to the content. It must have an alt tag that describes the image content.
 
-Images in card lists appear to the side:
+Images appear to the side by default:
 
-(image)
+<Example>
+<ExampleCardListWithImages />
+</Example>
 
-[code snippet to add to card list]
+Images in callout cards appear on top and the image will always be clipped at 16:9 ratio:
 
-Images in card grids appear on top and the image will always be clipped at 16:9 ratio:
-
-(image)
-
-[code snippet to add to card grid]
+<Example>
+<ExampleCardGrid />
+</Example>
 
 #### Metadata
 
 Metadata is used for adding secondary information such as categories or labels to the content. For example a guidance type or published date.
 
-(image)
-
-[code snippet to add metadata]
-
-Card icon
-
-Use an icon to distinguish items in a list. Follow the rules around icon usage.
-
-(image)
+<Example>
+<h4>Preview</h4>
+<ExampleCardWithMetadata />
+<h4>Code</h4>
+<CH.Code>
+```js React
+<Card
+	headingText="Card with metadata"
+	metadata={[{ label: "label", value: "value" }, { value: "Another value" }]}
+/>
+```
+```html HTML
+<article class="card">
+	<header class="card__header">
+		<p class="card__heading">Card with metadata</p>
+	</header>
+	<dl class="card__metadata">
+		<div class="card__metadatum">
+			<dt class="visually-hidden">label</dt>
+			<dd>value</dd>
+		</div>
+		<div class="card__metadatum">
+			<dd>Another value</dd>
+		</div>
+	</dl>
+</article>
+```
+</CH.Code>
+</Example>
 
 ## Accessibility
 
