--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -1,4 +1,5 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
+import { Example } from "components/examples/Example";
 import { ActionBanner } from "@nice-digital/nds-action-banner";
 import { Button } from "@nice-digital/nds-button";
 
@@ -12,6 +13,8 @@ export const meta = {
 
 A banner for highlighting, and giving context to, a call-to-action.
 
+<Example>
+<h2>Example: action banner</h2>
 <ActionBanner
 	title="Sign up for NICE News"
 	cta={<Button variant="cta">Sign up</Button>}
@@ -19,12 +22,11 @@ A banner for highlighting, and giving context to, a call-to-action.
 	Our monthly newsletter, keeping you up to date with{" "}
 	<a href="#">important developments at NICE</a>
 </ActionBanner>
+</Example>
 
 ## When to use
 
 Use action banners to provide a call to action with context, particularly when drawing attention to the key call to action on the page. They can also be used to break up a page layout and give visual interest.
-
-**TODO: add screenshot here**
 
 The action banner highlights a key action users can take. The colour adds contrast and breaks up the page.
 
@@ -32,13 +34,11 @@ The action banner highlights a key action users can take. The colour adds contra
 
 Don't use for large blocks of content. An action banner is designed as a short interruption on the page to call attention to a key action or goal. There should be a short heading and one or two sentences of content maximum.
 
-**TODO: add screenshot here**
-
 An example of the banner to call attention to registering as a stakeholder. There is a short heading and just one sentence of supporting text.
 
 If you need to highlight or emphasise larger blocks of content use the panel component [link to Panel].
 
-For warning, error or caution messages use the alert component. [link to alerts].
+For warning, error or caution messages use the [alert component](/components/alert).
 
 ## How to use
 
@@ -50,6 +50,8 @@ The action should be a button: choose the right type of button (primary, seconda
 
 ### Default action banner
 
+<Example>
+<h4>Example: default action banner</h4>
 <ActionBanner
 	title="Default action banner"
 	cta={<Button variant="cta">A CTA</Button>}
@@ -57,6 +59,7 @@ The action should be a button: choose the right type of button (primary, seconda
 	This is some content with <a href="#">a link</a>
 </ActionBanner>
 
+<h4>Code</h4>
 <CH.Code>
 ```js React
 <ActionBanner
@@ -84,11 +87,14 @@ The action should be a button: choose the right type of button (primary, seconda
 </section>
 ```
 </CH.Code>
+</Example>
 
 The default variant is strong and grabs users' attention. Use sparingly for important calls of action on a page that need extra context. Can be used with an inverse button - .btn.btn--inverse or with a call to action button - .btn.btn--cta for extra impact.
 
 ### Subtle action banner
 
+<Example>
+<h4>Example: subtle action banner</h4>
 <ActionBanner
 	variant="subtle"
 	title="Subtle action banner"
@@ -97,6 +103,7 @@ The default variant is strong and grabs users' attention. Use sparingly for impo
 	This is <a href="#">some content with a link</a>
 </ActionBanner>
 
+<h4>Code</h4>
 <CH.Code>
 ```js React
 <ActionBanner
@@ -125,6 +132,7 @@ The default variant is strong and grabs users' attention. Use sparingly for impo
 </section>
 ```
 </CH.Code>
+</Example>
 
 Use the subtle variant when you need a call to action with context, but don't want to distract users. For example giving feedback on a page. Use with a primary .btn.btn--primaryor secondary - .btn.btn--secondary button.
 
