NDS-337 Repair button component

--- a/docs/pages/components/button.mdx
+++ b/docs/pages/components/button.mdx
@@ -12,5 +12,6 @@ export const meta = {
 *** Placeholder component page ***
 
 <Button>I am button!</Button>
+<Button variant={Button.variants.cta}>I am button!</Button>
 
 export default ({ children }) => <ComponentLayout meta={meta}>{children}</ComponentLayout>;
