NDS-337 Add card grid variant without images

--- a/docs/pages/components/card.mdx
+++ b/docs/pages/components/card.mdx
@@ -3,6 +3,7 @@ import { Example } from "components/examples/Example";
 import {
 	ExampleCardList,
 	ExampleCardGrid,
+	ExampleCardGridWithImages,
 	ExampleGuidanceList,
 	ExampleCard,
 	ExampleCalloutCard,
@@ -227,7 +228,7 @@ Images in callout cards appear on top and the image will always be clipped at 16
 
 <Example>
 <h5>Example: callout card grid with images</h5>
-<ExampleCardGrid />
+<ExampleCardGridWithImages />
 </Example>
 
 #### Metadata
