NDS-337 Add placeholder docs pages for foundations

--- a/docs/pages/foundations/grids-and-layout.mdx
+++ b/docs/pages/foundations/grids-and-layout.mdx
@@ -1,7 +1,7 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 
 export const meta = {
-	title: "Colour"
+	title: "Grids and layout"
 };
 
 # {meta.title}
