--- a/docs/pages/foundations/responsive.mdx
+++ b/docs/pages/foundations/responsive.mdx
@@ -1,7 +1,7 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 
 export const meta = {
-	title: "Colour"
+	title: "Responsive"
 };
 
 # {meta.title}
