NDS-337 Add spacing, colour & typography foundation pages to docs

--- a/docs/pages/foundations/colour.mdx
+++ b/docs/pages/foundations/colour.mdx
@@ -7,6 +7,8 @@ export const meta = {
 
 # {meta.title}
 
+Colours are split into two groups:
+
 - The NICE palette ([\_settings-colours-nice.scss](https://github.com/nice-digital/nice-design-system/blob/main/components/nds-core/scss/settings/_settings-colours-nice.scss))
 - Semantic colours ([\_settings-colours-semantic.scss](https://github.com/nice-digital/nice-design-system/blob/main/components/nds-core/scss/settings/_settings-colours-semantic.scss))
 
