NDS-377 Update NDS homepage content/style

--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -5,13 +5,10 @@ import { Button } from "@nice-digital/nds-button";
 
 export const meta = {
 	title: "Action Banner",
+	description: "A banner for highlighting, and giving context to, a call-to-action.",
 	npmUrl: "https://www.npmjs.com/package/@nice-digital/nds-action-banner",
 	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-action-banner"
 };
-
-# {meta.title}
-
-A banner for highlighting, and giving context to, a call-to-action.
 
 <Example>
 <h2>Example: action banner</h2>
